--- a/config/gearwrench/default/core.entity_view_display.paragraph.steps.preview.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.steps.preview.yml
@@ -4,8 +4,8 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
-    - field.field.paragraph.steps.field_background_color_list
     - field.field.paragraph.steps.field_class_custom
+    - field.field.paragraph.steps.field_color
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
     - field.field.paragraph.steps.field_style
@@ -14,12 +14,11 @@ dependencies:
   module:
     - entity_reference_revisions
     - field_group
-    - options
 third_party_settings:
   field_group:
     group_settings:
       children:
-        - field_background_color_list
+        - field_color
         - field_style
         - field_class_custom
         - field_html_anchor
@@ -39,13 +38,6 @@ targetEntityType: paragraph
 bundle: steps
 mode: preview
 content:
-  field_background_color_list:
-    type: list_default
-    weight: 0
-    region: content
-    label: inline
-    settings: {  }
-    third_party_settings: {  }
   field_class_custom:
     type: string
     weight: 2
@@ -53,6 +45,14 @@ content:
     label: inline
     settings:
       link_to_entity: false
+    third_party_settings: {  }
+  field_color:
+    type: entity_reference_label
+    weight: 0
+    region: content
+    label: inline
+    settings:
+      link: true
     third_party_settings: {  }
   field_components:
     weight: 2
