--- a/config/gearwrench/default/core.entity_view_display.node.product.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
@@ -20,12 +21,22 @@ dependencies:
     - field.field.node.product.field_upc
     - node.type.product
   module:
+    - datetime
     - user
 id: node.product.default
 targetEntityType: node
 bundle: product
 mode: default
-content: {  }
+content:
+  field_launch_date:
+    weight: 1
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
 hidden:
   body: true
   field_featured_product: true
