--- a/config/gearwrench/default/core.entity_view_display.node.product.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.full.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
@@ -63,6 +64,7 @@ content:
 hidden:
   body: true
   field_featured_product: true
+  field_launch_date: true
   field_media: true
   field_meta_tags: true
   field_new_product: true
