--- a/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
@@ -47,6 +48,7 @@ content:
 hidden:
   body: true
   field_featured_product: true
+  field_launch_date: true
   field_meta_tags: true
   field_new_product: true
   field_product_classifications: true
