--- a/config/gearwrench/default/core.entity_view_display.node.product_listing.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_listing.default.yml
@@ -15,25 +15,11 @@ id: node.product_listing.default
 targetEntityType: node
 bundle: product_listing
 mode: default
-content:
-  field_category_facets:
-    weight: 1
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_classification_id:
-    weight: 2
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
+content: {  }
 hidden:
   body: true
+  field_category_facets: true
+  field_classification_id: true
   field_media: true
   field_product_classifications: true
   links: true
