--- a/config/gearwrench/default/core.entity_view_display.node.product_listing.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_listing.full.yml
@@ -10,7 +10,9 @@ dependencies:
     - field.field.node.product_listing.field_media
     - field.field.node.product_listing.field_product_classifications
     - node.type.product_listing
+    - responsive_image.styles.short_hero
   module:
+    - blazy
     - text
     - user
 id: node.product_listing.full
@@ -21,18 +23,51 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 0
     settings: {  }
     third_party_settings: {  }
     region: content
   field_media:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
-      view_mode: hero
-      link: false
+      image_style: ''
+      responsive_image_style: short_hero
+      media_switch: ''
+      thumbnail_style: ''
+      ratio: ''
+      view_mode: default
+      current_view_mode: full
+      background: false
+      caption:
+        title: '0'
+        alt: '0'
+      class: ''
+      id: ''
+      image: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
+      icon: ''
+      layout: ''
+      cache: 0
+      skin: ''
+      fx: ''
+      style: ''
+      box_caption: ''
+      box_caption_custom: ''
+      box_media_style: ''
+      box_style: ''
+      _uri: ''
+      breakpoints: {  }
+      sizes: ''
+      grid_header: ''
+      grid: 0
+      grid_medium: 0
+      grid_small: 0
     third_party_settings: {  }
-    type: entity_reference_entity_view
+    type: blazy_media
     region: content
 hidden:
   field_category_facets: true
