--- a/config/gearwrench/default/field.field.node.page.body.yml
+++ b/config/gearwrench/default/field.field.node.page.body.yml
@@ -10,11 +10,11 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
+    basic_html: basic_html
     limited_html: limited_html
-    plain_text: plain_text
-    basic_html: '0'
-    restricted_html: '0'
-    full_html: '0'
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: '0'
 _core:
   default_config_hash: fppC8uuHOh8Pva-8s4PRPWNyhyP1SiHgPdbElYvFqvY
 id: node.page.body
