--- a/config/gearwrench/default/responsive_image.styles.hero.yml
+++ b/config/gearwrench/default/responsive_image.styles.hero.yml
@@ -3,8 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.biggest
     - image.style.biggest_landscape_2x1
+    - image.style.biggest_landscape_3x2
     - image.style.huge_landscape_3x2
     - image.style.huge_landscape_4x3
     - image.style.large_landscape_4x3
@@ -12,7 +12,8 @@ dependencies:
     - image.style.medium_1x1
     - image.style.medium_landscape_3x2
     - image.style.medium_landscape_5x4
-    - image.style.small
+    - image.style.small_1x1
+    - image.style.small_portrait_1x2
   theme:
     - gearwrench
 _core:
@@ -27,14 +28,15 @@ image_style_mappings:
     image_mapping:
       sizes: 100vw
       sizes_image_styles:
-        - biggest
         - biggest_landscape_2x1
+        - biggest_landscape_3x2
         - huge_landscape_3x2
         - huge_landscape_4x3
         - large_landscape_4x3
         - large_landscape_5x4
         - medium_1x1
         - medium_landscape_5x4
-        - small
+        - small_1x1
+        - small_portrait_1x2
 breakpoint_group: gearwrench
 fallback_image_style: medium_landscape_3x2
