--- a/config/gearwrench/default/views.view.product_listing.yml
+++ b/config/gearwrench/default/views.view.product_listing.yml
@@ -36,7 +36,7 @@ display:
         type: views_query
         options:
           disable_sql_rewrite: false
-          distinct: false
+          distinct: true
           replica: false
           query_comment: ''
           query_tags: {  }
@@ -286,22 +286,40 @@ display:
           error_message: true
           plugin_id: taxonomy_index_tid
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_long_description_value:
+          id: field_long_description_value
+          table: node__field_long_description
+          field: field_long_description_value
           relationship: none
           group_type: group
           admin_label: ''
-          exposed: false
+          order: ASC
+          exposed: true
           expose:
-            label: ''
-          granularity: second
-      header: {  }
+            label: Name
+          plugin_id: standard
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Showing @per_page of @total results'
+          plugin_id: result
+        area_text_custom:
+          id: area_text_custom
+          table: views
+          field: area_text_custom
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: false
+          content: '<div class=''sort-icon''></div>'
+          plugin_id: text_custom
       footer: {  }
       empty: {  }
       relationships: {  }
@@ -349,6 +367,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'url.query_args:sort_by'
+        - 'url.query_args:sort_order'
         - user
         - 'user.node_grants:view'
         - user.permissions
@@ -368,6 +388,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'url.query_args:sort_by'
+        - 'url.query_args:sort_order'
         - user
         - 'user.node_grants:view'
         - user.permissions
