added footer js with mobile change, changed header css and js breakpoints, changed footer css order, added input  button border radius

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -421,6 +421,12 @@ region--footer-first:
   css:
     component:
       css/libraries/region/footer.css: {}
+  js:
+    js/libraries/region/footer.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
 
 # ========= Views ========= #
 
