Add embed options

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -470,6 +470,12 @@ view--product-listing-grid:
     component:
       css/libraries/view/product-listing-grid.css: {}
 
+view--product-category-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-category-grid.css: {}
+
 # ========= Forms ========= #
 webform--warranty-replacement-form:
   version: 1.x
