Create Product Category Content Type, change references

--- a/config/gearwrench/default/block.block.gearwrench_page_title.yml
+++ b/config/gearwrench/default/block.block.gearwrench_page_title.yml
@@ -25,6 +25,7 @@ visibility:
     bundles:
       landing_page: landing_page
       page: page
+      product_category: product_category
       product_listing: product_listing
     negate: false
     context_mapping:
