--- a/config/gearwrench/default/views.view.product_category_pages.yml
+++ b/config/gearwrench/default/views.view.product_category_pages.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - node.type.product_listing
+    - node.type.product_category
   module:
     - node
     - user
@@ -408,7 +408,7 @@ display:
           admin_label: ''
           operator: in
           value:
-            product_listing: product_listing
+            product_category: product_category
           group: 1
           exposed: false
           expose:
