--- a/docroot/modules/custom/gearwrench_migrations/config/install/migrate_plus.migration.gearwrench_product_category_pages_level_three.yml
+++ b/docroot/modules/custom/gearwrench_migrations/config/install/migrate_plus.migration.gearwrench_product_category_pages_level_three.yml
@@ -1,5 +1,5 @@
-# Migration configuration for gearwrench_product_listing_pages content.
-id: gearwrench_product_listing_pages_level_three
+# Migration configuration for gearwrench_product_category_pages content.
+id: gearwrench_product_category_pages_level_three
 label: Gearwrench Product Listing Pages - Level Three
 migration_group: gearwrench
 source:
@@ -59,7 +59,7 @@ process:
       - W3_736554
   type:
     plugin: default_value
-    default_value: product_listing
+    default_value: product_category
   title: remote_name
   sticky: constants/bool_0
   promote: constants/bool_1
