Updated header and typography font weight and transform, added featured tools after icon, Changed featured tools heading text, Changed case of search text, added eu url, added search block

--- a/config/crescenttool/default/block.block.header_search_block.yml
+++ b/config/crescenttool/default/block.block.header_search_block.yml
@@ -1,4 +1,4 @@
-uuid: 6f9c2b41-0c28-4f86-8863-cc1f7560d41f
+uuid: 8e3500db-1e11-493f-a440-e7e129b36a6f
 langcode: en
 status: true
 dependencies:
@@ -9,16 +9,16 @@ dependencies:
     - crescenttool
 third_party_settings:
   block_class:
-    classes: block--country-switch
-id: country_switch_block
+    classes: block--header-search
+id: header_search_block
 theme: crescenttool
 region: header
-weight: -3
+weight: -4
 provider: null
-plugin: country_switch
+plugin: header_search
 settings:
-  id: country_switch
-  label: 'Country Switch Block'
+  id: header_search
+  label: 'Header Search Block'
   provider: crescenttool_core
   label_display: '0'
 visibility: {  }
