--- a/config/gearwrench/default/core.entity_view_display.node.product_category.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product_category.default.yml
@@ -22,4 +22,6 @@ hidden:
   field_classification_id: true
   field_media: true
   field_product_classifications: true
+  langcode: true
   links: true
+  search_api_excerpt: true
