--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -8,6 +8,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   allowed_formats: 0
+  apex_tools_instagram_feed: 0
   automated_cron: 0
   better_exposed_filters: 0
   bg_image_formatter: 0
@@ -91,6 +92,7 @@ module:
   migrate_plus: 0
   migrate_tools: 0
   node: 0
+  node_view_permissions: 0
   options: 0
   page_cache: 0
   paragraphs_component_field: 0
@@ -119,6 +121,7 @@ module:
   token: 0
   toolbar: 0
   twig_tweak: 0
+  ultimate_cron: 0
   update: 0
   user: 0
   video_embed_field: 0
