--- a/config/gearwrench/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.node.landing_page.default.yml
@@ -10,13 +10,9 @@ dependencies:
     - field.field.node.landing_page.field_meta_tags
     - node.type.landing_page
   module:
-    - allowed_formats
     - field_group
-    - limited_field_widgets
-    - media_library
     - metatag
     - paragraphs
-    - paragraphs_component_field
     - path
     - text
 third_party_settings:
@@ -33,14 +29,15 @@ third_party_settings:
         classes: ''
         direction: horizontal
       label: Tabs
+      region: content
     group_main:
       children:
         - title
-        - field_component_hero
         - body
+        - field_component_hero
         - field_media
       parent_name: group_tabs
-      weight: 6
+      weight: 9
       format_type: tab
       format_settings:
         id: ''
@@ -49,11 +46,12 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Main
+      region: content
     group_content:
       children:
         - field_components
       parent_name: group_tabs
-      weight: 7
+      weight: 10
       format_type: tab
       format_settings:
         id: ''
@@ -62,6 +60,7 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Content
+      region: content
 _core:
   default_config_hash: BPPR6MvT_wTPxEQmViIMN_2ysNs_qYV4o2RgJOAUh6c
 id: node.landing_page.default
@@ -71,16 +70,14 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 0
+    region: content
     settings:
       rows: 9
-      placeholder: ''
       summary_rows: 3
-    third_party_settings:
-      allowed_formats:
-        hide_help: '1'
-        hide_guidelines: '1'
-    region: content
+      placeholder: ''
+      show_summary: false
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 3
@@ -88,61 +85,68 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_component_hero:
-    type: paragraphs_component
-    weight: 2
-    settings:
-      title: Hero
-      title_plural: Heros
-      form_display_mode: default
-      default_paragraph_type: hero
-      edit_mode: open
-      add_mode: dropdown
-    third_party_settings: {  }
+    type: paragraphs
+    weight: 0
     region: content
-  field_components:
-    weight: 12
     settings:
-      title: Component
-      title_plural: Components
-      edit_mode: closed
-      closed_mode: preview
-      autocollapse: all
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
       closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: _none
+      default_paragraph_type: ''
       features:
-        add_above: '0'
         collapse_edit_all: collapse_edit_all
         duplicate: duplicate
-    third_party_settings:
-      limited_field_widgets:
-        limit_values: '0'
-    type: paragraphs
-    region: content
-  field_media:
-    type: media_library_widget
-    weight: 4
-    settings:
-      media_types: {  }
     third_party_settings: {  }
+  field_components:
+    type: paragraphs
+    weight: 0
     region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
+  field_media:
+    type: entity_reference_autocomplete
+    weight: 0
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_meta_tags:
-    weight: 27
-    settings: {  }
+    weight: 9
+    settings:
+      sidebar: true
     third_party_settings: {  }
     type: metatag_firehose
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -157,7 +161,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 8
     region: content
     third_party_settings: {  }
   sticky:
@@ -169,7 +173,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 0
     region: content
     settings:
       size: 60
@@ -182,10 +186,11 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
