--- a/config/gearwrench/default/field.field.node.product.body.yml
+++ b/config/gearwrench/default/field.field.node.product.body.yml
@@ -6,7 +6,15 @@ dependencies:
     - field.storage.node.body
     - node.type.product
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    basic_html: basic_html
+    limited_html: limited_html
+    restricted_html: restricted_html
+    full_html: full_html
+    plain_text: '0'
 id: node.product.body
 field_name: body
 entity_type: node
