--- a/config/gearwrench/default/node.type.product.yml
+++ b/config/gearwrench/default/node.type.product.yml
@@ -11,7 +11,7 @@ third_party_settings:
     parent: 'main:'
 name: Product
 type: product
-description: ''
+description: 'A <em>Product</em> is an individual catalog item that is automatically generated via the PIM import.'
 help: ''
 new_revision: true
 preview_mode: 1
