--- a/config/gearwrench/default/core.entity_view_display.node.landing_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.landing_page.search_index.yml
@@ -34,7 +34,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: full
+      view_mode: preview
       link: ''
     third_party_settings: {  }
   field_components:
@@ -43,7 +43,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: full
+      view_mode: preview
       link: ''
     third_party_settings: {  }
 hidden:
