--- a/config/gearwrench/default/core.entity_view_display.node.page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.search_index.yml
@@ -23,23 +23,31 @@ mode: search_index
 content:
   body:
     type: text_default
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_components:
     type: entity_reference_revisions_entity_view
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
-      view_mode: full
+      view_mode: preview
       link: ''
+    third_party_settings: {  }
+  field_media:
+    type: entity_reference_entity_view
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      view_mode: teaser
+      link: false
     third_party_settings: {  }
 hidden:
   field_link: true
-  field_media: true
   field_meta_tags: true
   langcode: true
   links: true
