--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,8 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "dinbror/blazy": "^1.8",
+        "drupal/acquia_connector": "^3.0",
+        "drupal/acquia_search": "^3.0.0",
         "drupal/address": "^1.3",
         "drupal/admin_toolbar": "^3.0",
         "drupal/advagg": "^4.0",
