--- a/config/crescenttool/default/core.entity_view_display.media.remote_video.hero.yml
+++ b/config/crescenttool/default/core.entity_view_display.media.remote_video.hero.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.media.remote_video.field_media_video_embed_field
     - media.type.remote_video
   module:
-    - blazy
+    - video_embed_field
 id: media.remote_video.hero
 targetEntityType: media
 bundle: remote_video
@@ -17,57 +17,12 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: ''
-      responsive_image_style: ''
-      media_switch: ''
-      ratio: ''
-      iframe_lazy: true
-      sizes: ''
-      breakpoints:
-        xs:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        sm:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        md:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        lg:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-        xl:
-          image_style: ''
-          width: ''
-          breakpoint: ''
-      current_view_mode: hero
-      background: false
-      class: ''
-      id: ''
-      image: ''
-      link: ''
-      overlay: ''
-      title: ''
-      vanilla: false
-      icon: ''
-      layout: ''
-      thumbnail_style: ''
-      view_mode: ''
-      cache: 0
-      optionset: default
-      skin: ''
-      style: ''
-      box_caption: ''
-      box_caption_custom: ''
-      box_style: ''
-      box_media_style: ''
-      caption: {  }
+      responsive: true
+      width: 854
+      height: 480
+      autoplay: false
     third_party_settings: {  }
-    type: blazy_video
+    type: video_embed_field_video
     region: content
 hidden:
   created: true
