VYRKCATG-143: Separating out the config changes for local.

--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -35,6 +35,8 @@ module:
   current_page_crumb: 0
   datetime: 0
   datetime_range: 0
+  dblog: 0
+  devel: 0
   devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
@@ -111,6 +113,7 @@ module:
   shortcut: 0
   simple_sitemap: 0
   smart_trim: 0
+  stage_file_proxy: 0
   system: 0
   taxonomy: 0
   telephone: 0
@@ -126,6 +129,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_ui: 0
   viewsreference: 0
   webform: 0
   webform_attachment: 0
