--- a/config/gearwrench/default/config_split.config_split.local.yml
+++ b/config/gearwrench/default/config_split.config_split.local.yml
@@ -20,6 +20,7 @@ graylist:
   - advagg.settings
   - advagg_css_minify.settings
   - advagg_js_minify.settings
+  - core.extension
   - system.performance
   - search_api.index.site_search
 graylist_dependents: true
