--- a/config/gearwrench/default/search_api.index.acquia_search_index.yml
+++ b/config/gearwrench/default/search_api.index.acquia_search_index.yml
@@ -1,6 +1,6 @@
 uuid: 64aef3d8-4aa0-4247-8295-1197a4dfeed9
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - search_api_solr
@@ -8,7 +8,6 @@ dependencies:
     - search_api
   config:
     - field.storage.node.body
-    - search_api.server.acquia_search_server
 third_party_settings:
   search_api_solr:
     finalize: false
@@ -120,6 +119,7 @@ processor_settings:
     fields:
       - body
       - title
+      - type
     title: true
     alt: true
     tags:
@@ -133,6 +133,7 @@ processor_settings:
     weights:
       preprocess_index: -15
       preprocess_query: -15
+  language_with_fallback: {  }
   rendered_item: {  }
   solr_date_range:
     weights:
@@ -149,4 +150,4 @@ tracker_settings:
 options:
   index_directly: false
   cron_limit: 50
-server: acquia_search_server
+server: null
