VYRKCATG-143: Exported the config from dev for search.

--- a/config/gearwrench/default/search_api.index.acquia_search_index.yml
+++ b/config/gearwrench/default/search_api.index.acquia_search_index.yml
@@ -1,6 +1,6 @@
 uuid: 64aef3d8-4aa0-4247-8295-1197a4dfeed9
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - acquia_search
@@ -170,11 +170,10 @@ field_settings:
 datasource_settings:
   'entity:node':
     bundles:
-      default: true
+      default: false
       selected:
-        - product
-        - product_category
-        - styleguide
+        - landing_page
+        - page
     languages:
       default: true
       selected: {  }
