--- a/config/gearwrench/default/search_api.index.acquia_search_index_products.yml
+++ b/config/gearwrench/default/search_api.index.acquia_search_index_products.yml
@@ -1,6 +1,6 @@
 uuid: bd924881-0081-4f15-b615-6cd036274e0d
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - acquia_search
