--- a/config/gearwrench/default/views.view.acquia_search.yml
+++ b/config/gearwrench/default/views.view.acquia_search.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.body
     - search_api.index.acquia_search_index
-    - system.menu.main
   module:
     - search_api
     - text
@@ -52,10 +51,15 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 10
+          items_per_page: 4
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -64,12 +68,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: '‹ Previous'
-            next: 'Next ›'
-            first: '« First'
-            last: 'Last »'
-          quantity: 9
+          quantity: 4
       style:
         type: html_list
         options:
@@ -80,12 +79,13 @@ display:
           wrapper_class: item-list
           class: ''
       row:
-        type: fields
+        type: search_api
         options:
-          default_field_elements: true
-          inline: {  }
-          separator: ''
-          hide_empty: false
+          view_modes:
+            'entity:node':
+              landing_page: search_index
+              page: search_index
+              social_post: search_index
       fields:
         title:
           id: title
@@ -441,28 +441,19 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
-  page:
-    display_plugin: page
-    id: page
-    display_title: 'Acquia Search Solr Page'
-    position: 1
+        - 'config:search_api.index.acquia_search_index'
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 2
     display_options:
       display_extenders: {  }
-      path: search
-      exposed_block: false
-      menu:
-        type: normal
-        title: Search
-        description: ''
-        expanded: false
-        parent: ''
-        weight: 0
-        context: '0'
-        menu_name: main
-      display_description: ''
+      block_description: 'Non-Product Search'
     cache_metadata:
       max-age: -1
       contexts:
@@ -470,6 +461,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
         - user.permissions
       tags:
         - 'config:field.storage.node.body'
+        - 'config:search_api.index.acquia_search_index'
