--- a/config/gearwrench/default/acquia_connector.settings.yml
+++ b/config/gearwrench/default/acquia_connector.settings.yml
@@ -32,6 +32,9 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
+  site_environment: dev
+  env_detection_enabled: true
+  site_uuid: 8e6640da-9fe2-4d06-a32e-ff1c0e0df141
 mapping:
   acquia_spi_send_node_user:
     - acquia_connector.settings
