--- a/config/gearwrench/default/core.entity_view_display.node.landing_page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.landing_page.search_index.yml
@@ -34,19 +34,11 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: preview
-      link: ''
-    third_party_settings: {  }
-  field_components:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      view_mode: preview
+      view_mode: search_teaser
       link: ''
     third_party_settings: {  }
 hidden:
+  field_components: true
   field_media: true
   field_meta_tags: true
   langcode: true
