--- a/config/gearwrench/default/core.entity_view_display.node.page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.search_index.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.node.page.field_meta_tags
     - node.type.page
   module:
-    - entity_reference_revisions
     - text
     - user
 _core:
@@ -28,25 +27,17 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-  field_components:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      view_mode: preview
-      link: ''
-    third_party_settings: {  }
   field_media:
     type: entity_reference_entity_view
     weight: 0
     region: content
     label: hidden
     settings:
-      view_mode: teaser
+      view_mode: search_teaser
       link: false
     third_party_settings: {  }
 hidden:
+  field_components: true
   field_link: true
   field_meta_tags: true
   langcode: true
