--- a/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.search_index.yml
@@ -42,7 +42,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: product_teaser
+      view_mode: search_teaser
       link: false
     third_party_settings: {  }
   field_sku_group:
