--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -128,6 +128,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_ui: 0
   viewsreference: 0
   webform: 0
   webform_attachment: 0
