--- a/config/gearwrench/default/search_api.server.acquia_search_server.yml
+++ b/config/gearwrench/default/search_api.server.acquia_search_server.yml
@@ -8,14 +8,14 @@ dependencies:
     - search_api_solr.solr_cache.cache_filter_default_7_0_0
     - search_api_solr.solr_cache.cache_persegfilter_default_7_0_0
     - search_api_solr.solr_cache.cache_queryresult_default_7_0_0
-    - search_api_solr.solr_field_type.text_edge_und_6_0_0
+    - search_api_solr.solr_field_type.text_edge_und_7_0_0
     - search_api_solr.solr_field_type.text_edgestring_und_6_0_0
-    - search_api_solr.solr_field_type.text_en_6_0_0
-    - search_api_solr.solr_field_type.text_ngram_und_6_0_0
+    - search_api_solr.solr_field_type.text_en_7_0_0
+    - search_api_solr.solr_field_type.text_ngram_und_7_0_0
     - search_api_solr.solr_field_type.text_ngramstring_und_6_0_0
     - search_api_solr.solr_field_type.text_phonetic_en_7_0_0
     - search_api_solr.solr_field_type.text_phonetic_und_7_0_0
-    - search_api_solr.solr_field_type.text_und_6_0_0
+    - search_api_solr.solr_field_type.text_und_7_0_0
     - search_api_solr.solr_request_dispatcher.request_dispatcher_httpcachingnever_default_7_0_0
     - search_api_solr.solr_request_handler.request_handler_autocomplete_default_7_0_0
     - search_api_solr.solr_request_handler.request_handler_extract_default_7_0_0
@@ -36,18 +36,26 @@ backend: search_api_solr
 backend_config:
   connector: solr_acquia_connector
   connector_config:
-    scheme: https
-    timeout: '10'
-    index_timeout: '10'
-    optimize_timeout: '10'
-    finalize_timeout: '30'
-    commit_within: '1000'
-    solr_version: ''
-    http_method: AUTO
-    jmx: 0
+    identifier: AGQV-204467
+    api_key: 7a8b05544b5e601d98d16d51452d676f
+    uuid: 118e52af-17d6-4350-a54c-2a2e659b1657
+    api_host: 'https://api.sr-prod02.acquia.com'
+    skip_schema_check: true
+  disabled_field_types: {  }
+  disabled_caches: {  }
+  disabled_request_handlers:
+    - request_handler_elevate_default_7_0_0
+    - request_handler_replicationmaster_default_7_0_0
+    - request_handler_replicationslave_default_7_0_0
+  disabled_request_dispatchers:
+    - request_dispatcher_httpcaching_default_7_0_0
+  rows: 10
+  index_single_documents_fallback_count: 10
   retrieve_data: true
   highlight_data: true
-  skip_schema_check: true
+  fallback_multiple: false
   server_prefix: ''
   domain: generic
+  environment: default
+  optimize: false
   site_hash: true
