--- a/config/gearwrench/default/views.view.search.yml
+++ b/config/gearwrench/default/views.view.search.yml
@@ -9,7 +9,7 @@ dependencies:
     - search_api
     - text
 id: search
-label: Search
+label: 'Acquia Product Search Solr'
 module: views
 description: 'This is the primary search page which focuses on products.'
 tag: ''
@@ -247,8 +247,10 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.body'
+        - 'config:search_api.index.acquia_search_index_products'
   page_1:
     display_plugin: page
     id: page_1
@@ -264,5 +266,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
       tags:
         - 'config:field.storage.node.body'
+        - 'config:search_api.index.acquia_search_index_products'
